fixed a flex layout issue and a bug when updating the screen after roundValue is changed

--- a/style.css
+++ b/style.css
@@ -184,7 +184,9 @@ input{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex:2;
     gap:10px;
+    margin: 0px;
+    padding:0px
+
 }
 
